test/patternMatch2_4.slq
def f[n:!â„•](x:ğ”¹^n)mfree{
	x:=2; // error
	if nâ‰ 0{
		(H(a),)~f[n sub 1](b):=x; // error
		r:=(a,)~b; // error
	}else{
		r:=x;
	}
	return r;
}
